flux/my-cluster/apps/container-registry/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: container-registry-ingress
  namespace: container-registry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    kubernetes.io/ingress.class: traefik
    # ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "0"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # Optional: If you have multiple Ingress controllers, ensure Traefik is used
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure # For older Traefik versions or specific configs
    # ingress.kubernetes.io/router.entrypoints: web,websecure # If you use custom entrypoints
  labels:
    app: container-registry
spec:
  ingressClassName: traefik
  rules:
  - host: container-registry.bupd.xyz
    http:
      paths:
      - path: /service/ # The path you want to expose
        pathType: Prefix # Or Exact, if you only want /kumar and nothing else
        backend:
          service:
            name: harbor-core # Name of your Kubernetes Service
            port:
              number: 80 # Port your service is exposed on (from the Service definition)
      - path: /api/ # The path you want to expose
        pathType: Prefix # Or Exact, if you only want /kumar and nothing else
        backend:
          service:
            name: harbor-core # Name of your Kubernetes Service
            port:
              number: 80 # Port your service is exposed on (from the Service definition)
      - path: /c/ # The path you want to expose
        pathType: Prefix # Or Exact, if you only want /kumar and nothing else
        backend:
          service:
            name: harbor-core # Name of your Kubernetes Service
            port:
              number: 80 # Port your service is exposed on (from the Service definition)
      - path: / # The path you want to expose
        pathType: Prefix # Or Exact, if you only want /kumar and nothing else
        backend:
          service:
            name: harbor-portal # Name of your Kubernetes Service
            port:
              number: 80 # Port your service is exposed on (from the Service definition)
      - path: /v2/ # The path you want to expose
        pathType: Prefix # Or Exact, if you only want /kumar and nothing else
        backend:
          service:
            name: harbor-core # Name of your Kubernetes Service
            port:
              number: 80 # Port your service is exposed on (from the Service definition)
  tls:
  - hosts:
    - container-registry.bupd.xyz
    secretName: container-registry-tls
